[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "port2ctree"
version = "2025.1"
description = "Convert Nmap or Rustscan results into a Cherrytree (.ctd) file."
authors = [{ name = "kyssK00l" }]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
